fixed spacing and colors in blog manager

--- a/app/admin/adminComponents/adminSidebar/adminSidebar.module.css
+++ b/app/admin/adminComponents/adminSidebar/adminSidebar.module.css
@@ -1,4 +1,5 @@
 .adminSidebar {
+    position: fixed;
     width: 20rem;
     height: 100vh;
     display: flex;
